--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+#sidebar{
+    height:100vh;
+
+}
+#nav{
+    list-style-type: none;
+    margin: 0 0 0 0;
+    padding: 0;
+}
+#cPhoto{
+    width:120px;
+    height:120px;
+    border:1px solid black;
+    
+}
